--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         /* Hero Section */
         .hero {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1598226068205-091a18292850?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://github.com/audy99/plam-psu/blob/plam-psu/home.jpg');
             background-size: cover;
             background-position: center;
             height: 80vh;
