--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         /* Hero Section */
         .hero {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://github.com/audy99/plam-psu/blob/plam-psu/home.jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://img2.pic.in.th/pic/home5eff3d4678354fd4.jpg');
             background-size: cover;
             background-position: center;
             height: 80vh;
