--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         <div class="row align-items-center">
             <div class="col-lg-6 mb-4">
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1473862170180-84427c485aca?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Palm Factory">
+                    <img src="https://img2.pic.in.th/pic/home5eff3d4678354fd4.jpg" alt="Palm Factory">
                 </div>
             </div>
             <div class="col-lg-6">
